--- a/multipleLayers.html
+++ b/multipleLayers.html
@@ -12,6 +12,11 @@
       #mapid { height: 180px; } 
       </style>  
       </script>
+	  <script>
+       function loadEarthquakeData() {
+               alert("load the data here");
+       }
+      </script>
     </head> 
    <body> 
       <!-- the mapid div will hold the map --> 
