--- a/multipleLayers.html
+++ b/multipleLayers.html
@@ -46,6 +46,9 @@
          // change the map zoom so that all the data is shown
          mymap.fitBounds(earthquakelayer.getBounds());
        }
+	   function removeEarthquakeData() {
+       alert("remove the earthquake data here");
+       }
       </script>
     </head> 
    <body> 
@@ -54,7 +57,7 @@
       <!-- the following script will load the map and set the default view and zoom, as well as loading the 
       basemap tiles --> 
 	  <button id="loadData" name="loadData" onclick="loadEarthquakeData()">Click here to load the data </button>
-	  
+	  <button id="removeEarthquakeData" name="removeEarthquakeData" onclick="removeEarthquakeData()">Click here to remove the Earthquake data </button>
       <script> 
       // load the map 
       var mymap = L.map('mapid').setView([51.505, -0.09], 13); 
